--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,21 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Catalyst-Plugin-FormValidator
-version:      0.02
-version_from: FormValidator.pm
-installdirs:  site
+--- #YAML:1.0
+name:               Catalyst-Plugin-FormValidator
+version:            0.03
+abstract:           ~
+author:
+    - Sebastian Riedel (sri@oook.de)
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Catalyst:                      2.99
-    Data::FormValidator:           0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+    Catalyst:             2.99
+    Data::FormValidator:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
