--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,12 @@
---- #YAML:1.0
-name:               Catalyst-Plugin-FormValidator
-version:            0.03
-abstract:           ~
-author:
-    - Sebastian Riedel (sri@oook.de)
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Catalyst-Plugin-FormValidator
+version:      0.05
+version_from: FormValidator.pm
+installdirs:  site
 requires:
-    Catalyst:             2.99
-    Data::FormValidator:  0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
-meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+    Catalyst:                      5.8
+    Data::FormValidator:           0
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
