--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,26 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Catalyst-Plugin-FormValidator
-version:      0.05
-version_from: FormValidator.pm
-installdirs:  site
-requires:
-    Catalyst:                      5.8
-    Data::FormValidator:           0
-
+---
+abstract: Data::FormValidator
+author:
+  - 'Sebastian Riedel (sri@oook.de)'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: 'Module::Install version 0.93'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Catalyst-Plugin-FormValidator
+no_index:
+  directory:
+    - inc
+    - t
+requires:
+  Catalyst: 5.8
+  Data::FormValidator: 0
+  Moose: 0.93
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.09
